<resources>
    <string name="app_name">Powerful Body App</string>
    <string name="title_activity_body">BodyActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_new_workout">Add New Workout</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="select_day">Select Day</string>
    <string name="select_muscle_group">Select Muscle Group</string>
    <string name="select_exercises">Select Exercises</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="save">Save</string>
    <string name="modify">Modify</string>
    <string name="last_training_specification">Last Training Specification</string>
    <string name="weight">Weight: </string>
    <string name="series">Series: </string>
    <string name="repetitions">Repetitions: </string>
    <string name="break_time">Break Time: </string>



</resources>
