<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Workout.NewWorkoutActivity"
    android:id="@+id/new_workout_main_scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/new_workout_activity">

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_day"/>

        <CalendarView
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_muscle_group"/>

        <Spinner
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/muscleGroups_spinner"
            style="@style/SubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp" />

        <TextView
            android:layout_marginTop="30dp"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_exercises"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_wrapper"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"/>

        <CheckBox
            style="@style/SubTitleText"
            android:id="@+id/reminder_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder"
            android:layout_marginTop="30dp"/>

        <TimePicker
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/reminder_time_picker"
            android:timePickerMode="spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            style="@style/SubTitleText"
            android:id="@+id/save_workout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</ScrollView>